xds_envoy/file_eds/envoy.yaml
node:
  id: id_1
  cluster: testcluster

admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: http_egress
          codec_type: AUTO
          route_config:
            name: testroute
            virtual_hosts:
            - name: web_service_1
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                route: {cluster: webserver1}
        http_filters:
        - name: envoy.router
  dynamic_resources:
    cds_config:
      path: "/etc/envoy/cds.conf"
